--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -54,5 +54,14 @@
 
         /* Support for IE. */
         font-feature-settings: 'liga';
+
+    }
+    .name-content,
+    .title-content,
+    .price-content,
+    .change-content,
+    .date-content {
+        font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        font-weight: 700;
     }
 </style>
